[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Kufam-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/JsonEditor/ErrorInfosContainer.gd" type="Script" id=3]
[ext_resource path="res://src/JsonEditor/JsonEditor.gd" type="Script" id=4]
[ext_resource path="res://assets/ErrorsButtonStyle.tres" type="StyleBox" id=5]

[sub_resource type="Theme" id=1]
HBoxContainer/constants/separation = 4

[sub_resource type="DynamicFont" id=2]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="JsonEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.05176e-05
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SaveChangesDialog" type="ConfirmationDialog" parent="."]
margin_right = 400.0
margin_bottom = 140.0
rect_min_size = Vector2( 400, 140 )
window_title = "Save?"
dialog_text = "You have unsaved changes.
Do you want to save?"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 229.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 2
size_flags_vertical = 3
text = "{
	\"output\": \"ou\",
	\"input\": [\"adf\", \"asd\"]
}"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
caret_block_mode = true
caret_blink = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="ErrorInfosContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 500.0
margin_bottom = 267.0
rect_min_size = Vector2( 500, 20 )
theme = SubResource( 1 )
alignment = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="AcceptDialog" type="AcceptDialog" parent="VBoxContainer/ErrorInfosContainer"]
margin_left = 121.0
margin_top = -116.0
margin_right = 471.0
margin_bottom = 134.0
rect_min_size = Vector2( 250, 250 )
window_title = "Errors!"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ErrorInfosContainer/AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 206.0
bbcode_enabled = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ErrorInfosContainer"]
margin_left = 16.0
margin_right = 476.0
margin_bottom = 34.0
rect_min_size = Vector2( 460, 20 )

[node name="ErrorLabel" type="RichTextLabel" parent="VBoxContainer/ErrorInfosContainer/CenterContainer"]
margin_right = 460.0
margin_bottom = 34.0
rect_min_size = Vector2( 460, 15 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[url]3:testsadssadsaasasadsasdasdasdasdasdsaassadasdasdasdasdasdasdasasdasdasdasd[/url]"
text = "3:testsadssadsaasasadsasdasdasdasdasdsaassadasdasdasdasdasdasdasasdasdasdasd"
fit_content_height = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/ErrorInfosContainer"]
margin_left = 480.0
margin_right = 500.0
margin_bottom = 34.0

[node name="ErrorInfoButton" type="Button" parent="VBoxContainer/ErrorInfosContainer/CenterContainer2"]
margin_top = 7.0
margin_right = 20.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 20 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "1"
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 271.0
margin_right = 500.0
margin_bottom = 299.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 254.0
margin_bottom = 28.0
text = "< Back"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 307.0
margin_bottom = 28.0
text = "Save"
[connection signal="confirmed" from="SaveChangesDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="meta_clicked" from="VBoxContainer/ErrorInfosContainer/AcceptDialog/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/ErrorInfosContainer/CenterContainer/ErrorLabel" to="." method="_on_ErrorLabel_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/ErrorInfosContainer/CenterContainer2/ErrorInfoButton" to="VBoxContainer/ErrorInfosContainer" method="_on_ErrorInfoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
